# seed-phrase-generator

./: .version  README.md
seed-phrase-generator/: CMakeLists.txt  main.py  requirements.txt
seed-phrase-generator/include/: checksum.hpp  entropy.hpp  mnemonic.hpp
seed-phrase-generator/src/: __init__.py  checksum.cpp  entropy.cpp  generator.py  mnemonic.cpp  validator.py
seed-phrase-generator/tests/: test_generator.py
